src/objects/Apttus_Approval__Approval_Matrix__c.object
<CustomObject>
    <description>Specifies user approval levels and authorized discount percentages</description>
    <fields>
        <fullName>Apttus_Approval__Approval_Level__c</fullName>
        <label>Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approver_1_Authorized_Discount__c</fullName>
        <label>Approver 1 Authorized Discount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approver_1_Level__c</fullName>
        <label>Approver 1 Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001lyCtEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approver_2_Authorized_Discount__c</fullName>
        <label>Approver 2 Authorized Discount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approver_2_Level__c</fullName>
        <label>Approver 2 Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001lyBQEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approver_3_Authorized_Discount__c</fullName>
        <label>Approver 3 Authorized Discount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approver_3_Level__c</fullName>
        <label>Approver 3 Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001lyBdEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Error_Log__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Log</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Is_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Matrix_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval matrix owner</description>
        <inlineHelpText>Approval matrix owner</inlineHelpText>
        <label>Matrix Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Next_Level_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Level Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028YyHEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001lyCBEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Matrix</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Is_Active__c</columns>
        <columns>Apttus_Approval__Is_Valid__c</columns>
        <columns>Apttus_Approval__User__c</columns>
        <columns>Apttus_Approval__Approval_Level__c</columns>
        <columns>Apttus_Approval__Next_Level_Approver__c</columns>
        <columns>Apttus_Approval__Approver_1__c</columns>
        <columns>Apttus_Approval__Approver_1_Authorized_Discount__c</columns>
        <columns>Apttus_Approval__Approver_1_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Apttus_Approval__Approval_Level</fullName>
        <active>false</active>
        <description>Approval Level cannot be empty</description>
        <errorConditionFormula>ISPICKVAL(Apttus_Approval__Approval_Level__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Apttus_Approval__Approval_Level__c</errorDisplayField>
        <errorMessage>Approval Level cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus_Approval__Next_Level_Approver_For_Level_6</fullName>
        <active>true</active>
        <description>Next Level Approver should not be specified for Level 6 users.</description>
        <errorConditionFormula>AND((ISPICKVAL(Apttus_Approval__Approval_Level__c, &apos;Level 6&apos;)) , NOT(Apttus_Approval__Next_Level_Approver__c = &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Apttus_Approval__Next_Level_Approver__c</errorDisplayField>
        <errorMessage>Next Level Approver should not be specified for Level 6 users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus_Approval__Next_Level_Approver_Required</fullName>
        <active>true</active>
        <description>Next Level Approver required for all except Level 6 users.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Apttus_Approval__Approval_Level__c, &apos;Level 6&apos;) ) , Apttus_Approval__Next_Level_Approver__c = &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Apttus_Approval__Next_Level_Approver__c</errorDisplayField>
        <errorMessage>You have to specify a Next Level Approver for all except Level 6 users.</errorMessage>
    </validationRules>
</CustomObject>